log
Thu 09 Mar 2023 03:47:54 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a69f9c2
Thu 09 Mar 2023 04:03:17 PM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|5
total_score: 20/70
91ce9ce
Thu 09 Mar 2023 04:08:02 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5d4ea4d
Thu 09 Mar 2023 04:11:08 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:87:12: error: redefinition of ‘arrayTemporal’
   87 |    Vector *arrayTemporal = (Vector*)malloc(n);
      |            ^~~~~~~~~~~~~
exercises.c:85:12: note: previous definition of ‘arrayTemporal’ was here
   85 |    Vector *arrayTemporal = NULL;
      |            ^~~~~~~~~~~~~
Compilation failed
80f2d54
Thu 09 Mar 2023 04:11:31 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|4
total_score: 30/70
b970755
Thu 09 Mar 2023 04:12:17 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
592a0ea
Thu 09 Mar 2023 04:15:42 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:12: error: invalid type argument of ‘->’ (have ‘Vector’)
   86 |    arrayTmp->capacidad = n;
      |            ^~
exercises.c:88:12: error: invalid type argument of ‘->’ (have ‘Vector’)
   88 |    arrayTmp->datos = malloc(arrayTmp->capacidad * sizeof(int));
      |            ^~
exercises.c:88:37: error: invalid type argument of ‘->’ (have ‘Vector’)
   88 |    arrayTmp->datos = malloc(arrayTmp->capacidad * sizeof(int));
      |                                     ^~
exercises.c:90:19: error: invalid type argument of ‘->’ (have ‘Vector’)
   90 |    return arrayTmp->datos;
      |                   ^~
exercises.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c8a26ef
